# ParticlePhysics-MCP-Server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  claude-desktop-quick.json  docker-compose.override.yml  docker-compose.yml  docker-run.sh  examples.py  mcp-config-easy.json  mcp-server.json  mcp_config.json  pdg  pdg_cli.py  pdg_mcp_server.py  pp  pp_cli.py  pp_mcp_help.py  pp_mcp_server.py  pyproject.toml  requirements.txt  restart_mcp_inspector.sh  setup.py  test_modular.py  test_pdg_server.py  test_quick_install.py
.github/skills/particlephysics-skill/: SKILL.md
.github/workflows/: ci.yml  test-quick-install.yml
modules/: __init__.py  api.py  cache.py  config.py  connection.py  data.py  decay.py  errors.py  measurement.py  particle.py  units.py  utils.py  validation.py
particlephysics_mcp_server/: __main__.py  server.py
pdg_modules/: __init__.py  api.py  cache.py  config.py  connection.py  data.py  decay.py  errors.py  measurement.py  particle.py  units.py  utils.py  validation.py
tests/: __init__.py  examples.py  test_e2e_playwright.py  test_help.py  test_helpers.py  test_modular.py  test_quick.py  test_tools.py
