[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdg-mcp-server"
version = "1.0.0"
authors = [
    {name = "uzerone", email = ""},
    {name = "bee4come", email = ""},
]
description = "Model Context Protocol server for Particle Data Group (PDG) data access"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
]
keywords = ["particle", "physics", "PDG", "MCP", "research", "data"]
dependencies = [
    "mcp>=1.0.0",
    "pdg>=0.1.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/uzerone/pdg-mcp-server"
Documentation = "https://github.com/uzerone/pdg-mcp-server#readme"
Repository = "https://github.com/uzerone/pdg-mcp-server"
Issues = "https://github.com/uzerone/pdg-mcp-server/issues"
"PDG Website" = "https://pdg.lbl.gov/"
"PDG API Docs" = "https://pdgapi.lbl.gov/doc/"

[project.scripts]
pdg-mcp-server = "pdg_mcp_server:run_server"
pdg-cli = "pdg_cli:main"

[tool.setuptools.packages.find]
include = ["pdg_modules*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pdg_modules"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pdg_modules", "pdg_mcp_server", "pdg_cli"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 