[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "particlephysics-mcp-server"
version = "1.0.0"
description = "MCP server for Particle Data Group API"
authors = [{name = "ParticlePhysics MCP Server", email = "example@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pdg>=0.1.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.31.1",
    "httpx>=0.27.1",
    "pytest>=8.3.0",
]

[project.scripts]
particlephysics-mcp-server = "particlephysics_mcp_server.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["particlephysics_mcp_server"]


